--- a/messenger/View/Base.lproj/Main.storyboard
+++ b/messenger/View/Base.lproj/Main.storyboard
@@ -57,11 +57,11 @@
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cT4-J6-8dy">
                                 <rect key="frame" x="0.0" y="88" width="414" height="774"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="0yI-le-8dY">
-                                        <rect key="frame" x="8" y="8" width="398" height="758"/>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="v4v-Qo-cGy">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="774"/>
                                         <subviews>
                                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="bVs-cF-emQ">
-                                                <rect key="frame" x="0.0" y="0.0" width="398" height="668"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="414" height="674"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                 <connections>
                                                     <outlet property="dataSource" destination="Zrl-6j-3hJ" id="ZiF-tr-B5Z"/>
@@ -69,16 +69,16 @@
                                                 </connections>
                                             </tableView>
                                             <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QWS-qm-AB6">
-                                                <rect key="frame" x="0.0" y="678" width="398" height="80"/>
+                                                <rect key="frame" x="10" y="684" width="394" height="80"/>
                                                 <subviews>
-                                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" horizontalHuggingPriority="249" text=" Ваывавы выавыаы ывавыа ывавыыа ывавыавыаваыва выававыаыв вававыавыаыаы ываываыа  ывааывавыав ваываыввыаывава   " translatesAutoresizingMaskIntoConstraints="NO" id="NCc-z8-7ZB">
-                                                        <rect key="frame" x="0.0" y="0.0" width="351.5" height="80"/>
+                                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" horizontalHuggingPriority="249" text=" Ваывавы выавыаы ывавыа ывавыыа ывавыавыаваыва выававыаыв вававыавыаыаы ываываыа  ывааывавыав ваываыввыаывава   wdwd " translatesAutoresizingMaskIntoConstraints="NO" id="NCc-z8-7ZB">
+                                                        <rect key="frame" x="0.0" y="0.0" width="347.5" height="80"/>
                                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                                     </textView>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="H98-9o-fZ7">
-                                                        <rect key="frame" x="351.5" y="0.0" width="46.5" height="80"/>
+                                                        <rect key="frame" x="347.5" y="0.0" width="46.5" height="80"/>
                                                         <state key="normal" title="Button"/>
                                                         <buttonConfiguration key="configuration" style="plain">
                                                             <imageReference key="image" image="paperplane.fill" catalog="system" symbolScale="large"/>
@@ -89,30 +89,39 @@
                                                     </button>
                                                 </subviews>
                                                 <constraints>
-                                                    <constraint firstAttribute="height" constant="80" id="lQQ-E5-CCd"/>
+                                                    <constraint firstAttribute="height" constant="80" id="xys-tS-KPe"/>
                                                 </constraints>
                                             </stackView>
                                         </subviews>
-                                    </stackView>
+                                        <color key="backgroundColor" systemColor="systemGray6Color"/>
+                                        <constraints>
+                                            <constraint firstItem="QWS-qm-AB6" firstAttribute="top" secondItem="bVs-cF-emQ" secondAttribute="bottom" constant="10" id="BUP-f8-S0b"/>
+                                            <constraint firstItem="bVs-cF-emQ" firstAttribute="top" secondItem="v4v-Qo-cGy" secondAttribute="top" id="DhH-Ff-fsW"/>
+                                            <constraint firstItem="bVs-cF-emQ" firstAttribute="leading" secondItem="v4v-Qo-cGy" secondAttribute="leading" id="FEf-VY-t0W"/>
+                                            <constraint firstAttribute="trailing" secondItem="QWS-qm-AB6" secondAttribute="trailing" constant="10" id="Mwh-QV-21b"/>
+                                            <constraint firstItem="QWS-qm-AB6" firstAttribute="leading" secondItem="v4v-Qo-cGy" secondAttribute="leading" constant="10" id="bg3-un-uMx"/>
+                                            <constraint firstAttribute="trailing" secondItem="bVs-cF-emQ" secondAttribute="trailing" id="rMz-om-o8B"/>
+                                            <constraint firstAttribute="bottom" secondItem="QWS-qm-AB6" secondAttribute="bottom" constant="10" id="vrB-R2-jR0"/>
+                                        </constraints>
+                                    </view>
                                 </subviews>
-                                <color key="backgroundColor" systemColor="systemGray6Color"/>
                                 <constraints>
-                                    <constraint firstItem="0yI-le-8dY" firstAttribute="top" secondItem="cT4-J6-8dy" secondAttribute="topMargin" id="DeM-5f-y7S"/>
-                                    <constraint firstAttribute="bottomMargin" secondItem="0yI-le-8dY" secondAttribute="bottom" id="aHq-hL-NRJ"/>
-                                    <constraint firstAttribute="trailingMargin" secondItem="0yI-le-8dY" secondAttribute="trailing" id="aqB-4K-fqa"/>
-                                    <constraint firstItem="0yI-le-8dY" firstAttribute="leading" secondItem="cT4-J6-8dy" secondAttribute="leadingMargin" id="fKQ-rl-bYO"/>
-                                    <constraint firstItem="0yI-le-8dY" firstAttribute="centerX" secondItem="cT4-J6-8dy" secondAttribute="centerX" id="gF5-iD-iOr"/>
-                                    <constraint firstItem="0yI-le-8dY" firstAttribute="centerY" secondItem="cT4-J6-8dy" secondAttribute="centerY" id="nDk-op-HFO"/>
+                                    <constraint firstAttribute="bottom" secondItem="v4v-Qo-cGy" secondAttribute="bottom" id="6q3-Kp-6Bo"/>
+                                    <constraint firstItem="v4v-Qo-cGy" firstAttribute="leading" secondItem="cT4-J6-8dy" secondAttribute="leading" id="KZS-iF-l3U"/>
+                                    <constraint firstAttribute="trailing" secondItem="v4v-Qo-cGy" secondAttribute="trailing" id="OCi-xW-IPo"/>
+                                    <constraint firstItem="v4v-Qo-cGy" firstAttribute="centerX" secondItem="cT4-J6-8dy" secondAttribute="centerX" id="SkA-2d-MbJ"/>
+                                    <constraint firstItem="v4v-Qo-cGy" firstAttribute="centerY" secondItem="cT4-J6-8dy" secondAttribute="centerY" id="ZQU-oZ-4jT"/>
+                                    <constraint firstItem="v4v-Qo-cGy" firstAttribute="top" secondItem="cT4-J6-8dy" secondAttribute="top" id="kF8-o9-YFf"/>
                                 </constraints>
                             </scrollView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Gkc-m2-jeA"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="cT4-J6-8dy" firstAttribute="leading" secondItem="Gkc-m2-jeA" secondAttribute="leading" id="MdF-O3-QzW"/>
-                            <constraint firstItem="cT4-J6-8dy" firstAttribute="top" secondItem="Gkc-m2-jeA" secondAttribute="top" id="XPF-tN-II2"/>
-                            <constraint firstItem="cT4-J6-8dy" firstAttribute="bottom" secondItem="Gkc-m2-jeA" secondAttribute="bottom" id="inm-mf-QRd"/>
-                            <constraint firstItem="cT4-J6-8dy" firstAttribute="trailing" secondItem="Gkc-m2-jeA" secondAttribute="trailing" id="kj7-EK-cJh"/>
+                            <constraint firstItem="cT4-J6-8dy" firstAttribute="top" secondItem="Gkc-m2-jeA" secondAttribute="top" id="U2v-bG-AbC"/>
+                            <constraint firstItem="cT4-J6-8dy" firstAttribute="leading" secondItem="Gkc-m2-jeA" secondAttribute="leading" id="VJ8-3z-GOS"/>
+                            <constraint firstItem="cT4-J6-8dy" firstAttribute="trailing" secondItem="Gkc-m2-jeA" secondAttribute="trailing" id="l8b-KP-Kka"/>
+                            <constraint firstItem="cT4-J6-8dy" firstAttribute="bottom" secondItem="Gkc-m2-jeA" secondAttribute="bottom" id="o3N-4A-czx"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Title" id="gHy-az-AYK">
