--- a/messenger/View/MessageToUserCell.xib
+++ b/messenger/View/MessageToUserCell.xib
@@ -1,21 +1,78 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="MessageToUserCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="83" id="KGk-i7-Jjw" customClass="MessageToUserCell" customModule="messenger" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="336" height="83"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="336" height="83"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6h9-We-CoU">
+                        <rect key="frame" x="10" y="10" width="266" height="63"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" text="входящее сообщение" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XkM-Ke-rMm">
+                                <rect key="frame" x="8" y="8" width="219" height="47"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="22:20" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wnL-jf-wg0">
+                                <rect key="frame" x="227" y="41.5" width="31" height="13.5"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="31" id="Yct-XG-9Be"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                                <color key="textColor" systemColor="systemGrayColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="XkM-Ke-rMm" firstAttribute="top" secondItem="6h9-We-CoU" secondAttribute="topMargin" id="LM9-rC-mcr"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="wnL-jf-wg0" secondAttribute="bottom" id="Lcl-tx-O5Y"/>
+                            <constraint firstItem="wnL-jf-wg0" firstAttribute="leading" secondItem="XkM-Ke-rMm" secondAttribute="trailing" id="Ov1-bK-DCX"/>
+                            <constraint firstItem="XkM-Ke-rMm" firstAttribute="leading" secondItem="6h9-We-CoU" secondAttribute="leadingMargin" id="fBN-Mf-G9n"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="wnL-jf-wg0" secondAttribute="trailing" id="gfM-Z7-Bwm"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="XkM-Ke-rMm" secondAttribute="bottom" id="yJe-oj-WMl"/>
+                        </constraints>
+                    </view>
+                </subviews>
+                <color key="backgroundColor" systemColor="systemGray6Color"/>
+                <constraints>
+                    <constraint firstItem="6h9-We-CoU" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="9HI-hg-pOz"/>
+                    <constraint firstAttribute="trailing" secondItem="6h9-We-CoU" secondAttribute="trailing" constant="60" id="ChR-Hj-uf7"/>
+                    <constraint firstAttribute="bottom" secondItem="6h9-We-CoU" secondAttribute="bottom" constant="10" id="cPa-43-UVV"/>
+                    <constraint firstItem="6h9-We-CoU" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="pfo-oV-7RY"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="incommingText" destination="XkM-Ke-rMm" id="beZ-cU-bVY"/>
+                <outlet property="incommingTime" destination="wnL-jf-wg0" id="uoV-ZU-Sp0"/>
+                <outlet property="viewIncomming" destination="6h9-We-CoU" id="ajS-Lc-wxh"/>
+            </connections>
+            <point key="canvasLocation" x="185.50724637681162" y="124.21875"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGray6Color">
+            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemGrayColor">
+            <color red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
